# chainless_backend

./: .gitignore  .gitmodules  1.txt  Cargo.toml  README.md  config.toml.example
api/: Cargo.toml  bak.py
api/account_manager/: Cargo.toml
api/account_manager/src/: route.js  route.rs
api/account_manager/src/verification_code/: email.rs  mod.rs  phone.rs
api/airdrop/: Cargo.toml
api/newbie_reward/: Cargo.toml
api/src/: route.rs
api/src/account_manager/: mod.rs
api/src/account_manager/captcha/: email.rs  mod.rs  phone.rs
api/src/account_manager/handlers/: check_captcha.rs  contact_is_used.rs  gen_token.rs  get_captcha.rs  get_user_device_role.rs  login.rs  mod.rs  register.rs  replenish_contact.rs  reset_password.rs  user_info.rs  verify_captcha.rs
api/src/account_manager_v2/: mod.rs
api/src/account_manager_v2/handlers/: get_captcha.rs  login.rs  register.rs  replenish_contact.rs  reset_password.rs  user_info.rs
api/src/air_reward/: mod.rs
api/src/air_reward/handlers/: get_sys_info.rs  mod.rs  receive_air.rs
api/src/airdrop/: mod.rs
api/src/airdrop/handlers/: bind_btc_address.rs  change_invite_code.rs  change_predecessor.rs  claim_cly.rs  claim_dw20.rs  get_grade.rs  mod.rs  new_btc_deposit.rs  reconfirm_bind_btc_address.rs  reset_status.rs  sign_claim_dw20.rs  status.rs
api/src/airdrop_v2/: mod.rs
api/src/airdrop_v2/handlers/: claim_cly.rs  claim_dw20.rs  mod.rs  new_btc_deposit.rs
api/src/bridge/: mod.rs
api/src/bridge/handlers/: bind_eth_addr.rs  gen_bind_eth_addr_sig.rs  gen_deposit_sig.rs  get_binded_eth_addr.rs  list_deposit_order.rs  list_order.rs  list_withdraw_order.rs  mod.rs  pre_withdraw.rs
api/src/bridge_v2/: mod.rs
api/src/bridge_v2/handlers/: get_binded_eth_addr.rs  list_deposit_order.rs  mod.rs  pre_withdraw.rs
api/src/utils/: api_test.rs  btc_aggregated_api.rs  mod.rs  respond.rs  token_auth.rs  wallet_grades.rs  yourdomain.csr  yourdomain.key  yourdomain.pem
api/src/utils/captcha/: email.rs  mod.rs  phone.rs
api/src/utils/captcha/sms/: cmtelecom.rs  mod.rs  smsbao.rs
api/src/wallet/: README.md  mod.rs  transaction.rs
api/src/wallet/handlers/: add_servant.rs  add_subaccount.rs  balance_list.rs  cancel_send_money.rs  commit_newcomer_replace_master.rs  commit_servant_switch_master.rs  create_main_account.rs  device_list.rs  direct_send_money.rs  estimate_transfer_fee.rs  faucet_claim.rs  gen_newcomer_replace_master.rs  gen_newcomer_switch_master.rs  gen_send_money.rs  gen_servant_switch_master.rs  gen_tx_newcomer_replace_master.rs  get_device_secret.rs  get_fees_priority.rs  get_master_secret.rs  get_need_sig_num.rs  get_secret.rs  get_strategy.rs  get_tx.rs  mod.rs  new_master.rs  new_sub_wallet.rs  newcommer_switch_servant.rs  pending_pubkey.rs  pre_send_money.rs  pre_send_money_to_bridge.rs  pre_send_money_to_sub.rs  pre_send_money_to_sub.rs_bak  react_pre_send_money.rs  reconfirm_send_money.rs  remove_servant.rs  remove_subaccount.rs  replace_servant.rs  search_message.rs  servant_replace_master.rs  servant_saved_secret.rs  (+9 more)
api/src/wallet_v2/: README.md  mod.rs
api/src/wallet_v2/handlers/: add_servant.rs  add_subaccount.rs  cancel_send_money.rs  commit_newcomer_replace_master.rs  commit_servant_switch_master.rs  estimate_transfer_fee.rs  gen_newcomer_switch_master.rs  gen_send_money.rs  get_strategy.rs  get_tx.rs  newcommer_switch_servant.rs  pre_send_money.rs  reconfirm_send_money.rs  remove_servant.rs  remove_subaccount.rs  servant_saved_secret.rs  set_fees_priority.rs  single_balance.rs  sub_send_to_main.rs  tx_list.rs  update_security.rs  upload_servant_sig.rs  upload_tx_signed_data.rs
api/wallet/: 1.txt  Cargo.toml
api/wallet/src/: message.rs  route.js  route.rs
blockchain/: Cargo.toml  README.md
blockchain/src/: air_reward.rs  airdrop.rs  bridge.json  bridge.rs  bridge_on_eth.rs  bridge_on_near.rs  coin.rs  erc20.json  erc20_on_eth.rs  eth_cli.rs  fees_call.rs  general.rs  hello.rs  lib.rs  meta.rs  multi_sig.rs  register_relayer.rs  relayer.rs
common/: Cargo.toml  README.md
common/src/: btc_crypto.rs  constants.rs  encrypt.rs  env.rs  error_code.rs  hash.rs  lib.rs  log.rs  prelude.rs  token_auth.rs
common/src/data_structures/: account_manager.rs  airdrop.rs  bridge.rs  coin_transaction.rs  device_info.rs  mod.rs  secret_store.rs  wallet.rs  wallet_namage_record.rs
common/src/http/: mod.rs  token_auth.rs
common/src/utils/: math.rs  mod.rs  time.rs
doc/assets/: main.bundle.js
docs/: index.html
docs/assets/: main.bundle.js
models/: Cargo.toml
models/src/: account_manager.rs  airdrop.rs  coin_transfer.rs  device_info.rs  eth_bridge_order.rs  general.rs  lib.rs  secret_store.rs  wallet.rs  wallet_manage_record.rs
scanner/: Cargo.toml  README.md
scanner/src/: main.rs
scanner/src/task/: chainless_coin_transfer.rs  chainless_wallet_manage.rs  eth_bridge.rs  mod.rs
tools/: README.md  apidoc.json  db_init.sh  deploy_dev.sh  deploy_local.sh  down.sql  err_code.json  local.env  run_test.sh  start_service.sh  stop_all_api.sh  test.env  up.sql
