[workspace]
resolver = "2"
members = [
    "api",
    "common",
    "scanner",
    "models",
    "blockchain"
]

exclude = [
    "doc",
    "tools"
]

[workspace.dependencies]
common = { path = "./common" }
models = { path = "./models" }
blockchain = { path = "./blockchain" }

## actix
actix-web = "4.4.1"
actix-cors = "0.6.5"
actix-rt = "2.9.0"
actix-http  = "3.5.1"

## serder
serde = { version = "1.0.193", features = ["derive"] }
## serde_json = "1.0.108"
serde_derive = "1.0"

## tokio
tokio = { version = "1.28.2", features = ["full"] }



## near
near-jsonrpc-client = "0.8.0"
near-crypto = "0.20.0"
near-primitives = "0.20.0"
near-chain-configs = "0.20.0"
near-jsonrpc-primitives = "0.20.0"

## eth
ethers = "2.0.11"
ethers-signers = "2.0.13"
ethers-core = "2.0.13"
ethers-contract = "2.0.13"

## log
env_logger = "0.11.3"
tracing = "0.1.27"
tracing-futures = "0.2.5"
tracing-subscriber = "0.2.22"

## crypto
ed25519-dalek = "=1.0.1"
hex = "0.4"
base58 = "0.2.0"
uuid = { version = "1.7.0" ,features = ["v4"]}
serde_json = { version = "1.0.108", default-features = false, features = ["alloc", "arbitrary_precision"] }
bs58 = "0.5.1"
rand = "0.7"
base64 = "0.10.1"

## code tool
derive_more = "0.99"
strum_macros = "0.26.1"
strum = "0.26.1"
thiserror = "1.0.52"
anyhow = "1.0.77"



## other
lettre = "0.11"
reqwest = "0.11"
lazy_static = "1.4.0"
regex = "1.5"
actix-web-httpauth = "0.6"
jsonwebtoken = "7.2.0"
phonenumber = "0.3"
chrono = "0.4"
jsonrpc-http-server = "12.0"
untrusted = "0.6.2"
num = "0.2"
jsonrpc-client-http = "0.5.0"
jsonrpc-client-core = "0.5.0"
slog-term = "2.4.0"
slog-async = "2.3.0"
postgres = {version = "0.16.0-rc.2",features=["with-serde_json-1"]}
rust_decimal = { version = "1.0.3", features = ["postgres"] }
rustc-serialize = "0.3.18"
clap = "4.5.4"







