[package]
name = "wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "api"
path = "src/route.rs"

[dependencies]
common = { workspace = true }
models = { workspace = true }
blockchain = { workspace = true }
actix-web = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
actix-cors = { workspace = true }
actix-rt = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }
lettre = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
lazy_static = { workspace = true }
regex = { workspace = true }
actix-web-httpauth = { workspace = true }
jsonwebtoken = { workspace = true }
tracing = { workspace = true }
tracing-futures  = { workspace = true }
tracing-subscriber = { workspace = true }
phonenumber = { workspace = true }
ed25519-dalek  = { workspace = true }
strum_macros = { workspace = true }
strum = { workspace = true }
env_logger = { workspace = true }



[dev-dependencies]
actix-http = { workspace = true }
hex = { workspace = true }

