[package]
name = "api_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "api"
path = "src/route.rs"

[dependencies]
actix-cors = { workspace = true }
actix-http =  { workspace = true }
actix-rt = { workspace = true }
actix-web = { workspace = true }
anyhow = { workspace = true }
blockchain = { workspace = true }
chrono = { workspace = true }
common = { workspace = true }
ed25519-dalek  = { workspace = true }
env_logger = { workspace = true }
futures-util = { workspace = true }
jsonwebtoken = { workspace = true }
lazy_static = { workspace = true }
lettre = { workspace = true }
models = { workspace = true }
phonenumber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
rust_decimal = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-futures  = { workspace = true }
tracing-subscriber = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
actix-http = { workspace = true }

