[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.3.0"
near-jsonrpc-client = "0.8.0"
near-crypto = "0.20.0"
near-primitives = "0.20.0"
near-chain-configs = "0.20.0"
near-jsonrpc-primitives = "0.20.0"
hex = "0.4"
serde_json = "1.0.108"
serde = "1.0.193"
common = {path = "../common"}
ed25519-dalek = "1.0.1"
tracing = "0.1.27"
rand = "0.7"
anyhow = "1.0.53"
ethers = "2.0.11"
ethers-signers = "2.0.13"
ethers-core = "2.0.13"
ethers-contract = "2.0.13"





[dev-dependencies]
tokio = { version = "1.28", features = ["full"] }

