[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
common = { workspace = true }
ed25519-dalek = { workspace = true }
ethers = { workspace = true }
ethers-contract = { workspace = true }
ethers-core  = { workspace = true }
ethers-signers = { workspace = true }
hex = { workspace = true }
lazy_static = { workspace = true }
near-chain-configs = { workspace = true }
near-crypto  = { workspace = true }
near-jsonrpc-client  = { workspace = true }
near-jsonrpc-primitives = { workspace = true }
near-primitives = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

