[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
lazy_static = "1.4.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0.108"
thiserror = "1.0.52"
chrono = "0.4"
jsonwebtoken = "7.2.0"
actix-web = "4.4.1"
near-primitives = "0.20.0"
anyhow = "1.0.53"
base58 = "0.2.0"
hex = "0.4"
uuid = { version = "1.7.0" ,features = ["v4"]}
env_logger = "0.11"
tracing = "0.1.27"
tracing-futures = "0.2.5"
tracing-subscriber = "0.2.22"
strum_macros = "0.26.1"
strum = "0.26.1"

near-crypto = "0.17.0"
ed25519-dalek = "=1.0.1"
bs58 = "0.5.1"



