[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { workspace = true }
anyhow = { workspace = true }
base58 = { workspace = true }
bs58 = { workspace = true }
bitcoin = { workspace = true }
chrono = { workspace = true }
ed25519-dalek = { workspace = true }
env_logger = { workspace = true }
hex = { workspace = true }
jsonwebtoken = { workspace = true }
lazy_static = { workspace = true }
near-crypto  = { workspace = true }
near-primitives = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
secp256k1 = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-futures = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }