[package]
name = "models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait =  { workspace = true }
chrono = { workspace = true }
common = { workspace = true }
derive_more = { workspace = true }
deadpool = { workspace = true }
deadpool-postgres = { workspace = true }
futures = { workspace = true }
jsonrpc-client-core = { workspace = true }
jsonrpc-client-http = { workspace = true }
lazy_static = { workspace = true }
serde_json = { workspace = true }
rustc-serialize = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tokio-postgres = {workspace = true}
tokio = { workspace = true }



[dev-dependencies]
tokio = { workspace = true }


