[package]
name = "scanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../common"}
models = {path = "../models"}

serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
actix-cors = "0.6.5"
tokio = { version = "1.28.2", features = ["full"] }
rand = "0.8.5"
lettre = "0.11"
reqwest = "0.11"
anyhow = "1.0.77"
blockchain = {path = "../blockchain"}
lazy_static = "1.4.0"
regex = "1.5"
actix-web-httpauth = "0.6"
tracing = "0.1.27"
tracing-futures = "0.2.5"
tracing-subscriber = "0.2.22"
ed25519-dalek = "1.0.1"
strum_macros = "0.26.1"
strum = "0.26.1"
