[package]
name = "scanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { workspace = true }
models = { workspace = true }
blockchain = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
actix-cors = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }
lettre = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
lazy_static = { workspace = true }
actix-web-httpauth = { workspace = true }
tracing = { workspace = true }
tracing-futures = { workspace = true }
tracing-subscriber = { workspace = true }
ed25519-dalek = { workspace = true }
strum_macros = { workspace = true }
strum = { workspace = true }
clap = { workspace = true }
hex = { workspace = true }





