[package]
name = "scanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = { workspace = true }
actix-web-httpauth = { workspace = true }
anyhow = { workspace = true }
blockchain = { workspace = true }
clap = { workspace = true }
common = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
lazy_static = { workspace = true }
lettre = { workspace = true }
models = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-futures = { workspace = true }
tracing-subscriber = { workspace = true }