[package]
name = "wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "wallet_api"
path = "src/route.rs"

[dependencies]
actix-web = "4.4.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
actix-cors = "0.6.5"
actix-rt = "2.9.0"
env_logger = "0.10.1"
log = "0.4.20"
tokio = { version = "1.28.2", features = ["full"] }
rand = "0.8.5"
lettre = "0.11"
reqwest = "0.11"
anyhow = "1.0.77"
common = {path = "../../common"}
models = {path = "../../models"}
blockchain = {path = "../../blockchain"}
lazy_static = "1.4.0"
regex = "1.5"
actix-web-httpauth = "0.6"
jsonwebtoken = "7.2.0"